<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/atlas_background_white"
    tools:context="com.layer.atlas.messenger.AtlasSettingsScreen">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.layer.atlas.messenger.AtlasSettingsScreen">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/atlas_screen_registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/atlas_ctl_edit_text"
            android:hint="@string/text_hint_login"
            android:inputType="textCapSentences|textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/atlas_screen_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/atlas_ctl_edit_text"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/atlas_screen_registration_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/atlas_ctl_edit_text"
            android:hint="@string/text_hint_password_confirm"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/atlas_screen_registration_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/atlas_background_transparent"
            android:text="@string/more_button_text"
            android:textColor="@color/atlas_text_blue_bright" />

        <LinearLayout
            android:id="@+id/atlas_screen_registration_expanded_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/atlas_screen_registration_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/atlas_ctl_edit_text"
                android:hint="@string/text_hint_firstname"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/atlas_screen_registration_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/atlas_ctl_edit_text"
                android:hint="@string/text_hint_lastname"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/atlas_screen_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/atlas_ctl_edit_text"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailSubject|textEmailAddress"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@android:color/transparent" />

    </LinearLayout>

</FrameLayout>

