<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/atlas_background_white"
    tools:context="com.layer.atlas.messenger.AtlasSettingsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/atlas_screen_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/atlas_ctl_edit_text"
            android:hint="@string/text_hint_login"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/atlas_screen_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/atlas_ctl_edit_text"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/atlas_screen_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/registration_button_text"
            android:textColor="@color/atlas_text_blue_bright"
            android:textSize="@dimen/abc_text_size_subhead_material" />
    </LinearLayout>

</ScrollView>